overflow due to h3 fixed

--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ h2 {
 h3 {
     color: #203e4d;
     align-self: flex-start;
-    margin: 5px 0 10px 10px;
+    padding: 5px 0 10px 10px;
 }
 
 /* card design  */
